[package]
name = "simple-router"
version = "0.1.10"
edition = "2021"
description = "A very, very rudementary SSG built in Rust & vanilla JavaScript."
license = "MIT"

[dependencies]
clap = { version = "4.5.9", features = ["cargo"] }
mime_guess = "2.0.5"
notify-debouncer-mini = "0.4.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.14"
xml = "0.8.20"
